Prepare auth policy

--- a/test_app/www/index.html
+++ b/test_app/www/index.html
@@ -42,6 +42,7 @@
         <div id="auth-fail-status">AuthFail - </div>
         <div id="auth-valid-status">AuthValid - </div>
         <div id="test-finished"></div>
+        <div id="debug"></div>
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
