--- a/test_app/www/index.html
+++ b/test_app/www/index.html
@@ -41,6 +41,7 @@
         <div id="auth-status">Auth - </div>
         <div id="auth-fail-status">AuthFail - </div>
         <div id="auth-valid-status">AuthValid - </div>
+        <div id="auth-log-out">AuthLogOut - </div>
         <div id="test-finished"></div>
         <div id="debug"></div>
 
