--- a/test_app/www/index.html
+++ b/test_app/www/index.html
@@ -47,6 +47,6 @@
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/test.js"></script>
+        <script type="text/javascript" src="js/test-bundle.js"></script>
     </body>
 </html>
