--- a/test_app/www/index.html
+++ b/test_app/www/index.html
@@ -42,6 +42,8 @@
         <div id="auth-fail-status">AuthFail - </div>
         <div id="auth-valid-status">AuthValid - </div>
         <div id="auth-log-out">AuthLogOut - </div>
+        <div id="cloud-status">Cloud - </div>
+        <div id="cloud-fail-status">CloudFail - </div>
         <div id="test-finished"></div>
         <div id="debug"></div>
 
